# ext-pocketmine-math

./: .gitignore  CMakeLists.txt  build.sh  config.m4  config.w32  php_pocketmine_math.h  pocketmine_math.cpp
examples/: AxisAlignedBB.php  Vector2.php
lib/: AxisAlignedBB.cpp  AxisAlignedBB.h  Bearing.cpp  Bearing.h  Facing.cpp  Facing.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  RayTraceResult.cpp  RayTraceResult.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  VectorMath.cpp  VectorMath.h  VoxelRayTrace.cpp  VoxelRayTrace.h
src/: PhpAxisAlignedBB.cpp  PhpAxisAlignedBB.h  PhpBearing.cpp  PhpBearing.h  PhpFacing.cpp  PhpFacing.h  PhpMath.cpp  PhpMath.h  PhpRayTraceResult.cpp  PhpRayTraceResult.h  PhpVector2.cpp  PhpVector2.h  PhpVector3.cpp  PhpVector3.h  ZendUtil.h
stubs/: pocketmine_math.php
